--- a/package.json
+++ b/package.json
@@ -24,14 +24,20 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.279.0",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.16.0",
+    "react-snowfall": "^2.2.0",
+    "react-snowstorm": "^0.0.3",
+    "react-tsparticles": "^2.12.2",
     "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
